# atelier_loopfinder

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  setup.cfg  test_main.py
assets/: items.yaml  ryza_2_items.py  ryza_2_recipes.csv  ryza_recipes.csv
model/: __init__.py  items.py
